--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Perfil
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,22 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Datos personales</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Email: {{ user.email }}</ion-card-subtitle>
+      <ion-card-title>{{ user.name}}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      {{ user.is_admin == 1 ? 'Es administrador del sistema' : 'Usuario regular de la aplicación' }}
+    </ion-card-content>
+
+    <ion-card-content>
+      Se unio al sistema: {{ user.created_at }}
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
